--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <img src="profile.jpg" class="img-responsive img-circle margin" style="display:inline" width="350" height="350">
+  <img src="https://ksanu1998.github.io/new_profile/profile.jpg" class="img-responsive img-circle margin" style="display:inline" width="350" height="350">
   <h3>K. Sai Anuroop</h3>
 </div>
 
