--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">About</h3>
   <p>I am pursuing a B.Tech in Computer Science Engineering from IIT Dharwad and currently in 3rd Semester. 
-     </p>
+     </p> 
+  <p><a href="http://10.250.8.18/iitdhcd-new/pro0.php">CS 213, SSL Course Project</a> </p><br>
 </div>
 
 <!-- Third Container (Grid) -->
