--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <h3 class="margin">About</h3>
   <p>I am pursuing a B.Tech in Computer Science Engineering from IIT Dharwad and currently in 3rd Semester. 
      </p> 
-  <p><a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">CS 213, SSL Course Project</a> </p><br>
+  <p><a href="https://github.com/ksanu1998/iitdh_contact_directory">CS 213, SSL Course Project</a> </p><br>
 </div>
 
 <!-- Third Container (Grid) -->
