--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   .margin {margin-bottom: 20px;}
   .margin {margin-top: 5px;}
   .bg-1 { 
-      background-color: #ba74cf/*#1abc9c*/; /* Green */
+      background-color: #8000b2/*#1abc9c*/; /* Green */
       color: #ffffff;
   }
   .bg-2 { 
@@ -50,6 +50,15 @@
   .navbar-nav  li a:hover {
       color: #1abc9c !important;
   }
+  hr { 
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1.5px;
+}
   </style>
 </head>
 <body>
@@ -69,12 +78,22 @@
 </div>
 
 <!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
+<div class="container-fluid bg-3 text-center">
   <h3 class="margin">About</h3>
-  <p>I am pursuing a B.Tech in Computer Science Engineering from IIT Dharwad and currently in 3rd Semester. 
-     </p>
-    <p><a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">CS 213, SSL Course Project</a> </p><br>
+  <p>I am pursuing a B.Tech in Computer Science Engineering from IIT Dharwad and currently in 4th Semester.    
 </div>
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Course Projects</h3>
+    <p>CS 213, SSL Course Project: <a href="https://github.com/ksanu1998/iitdh_contact_directory">IIT Dharwad Contact Directory</a> </p>
+</div>
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Internships</h3>
+    <p>Yara Fertilisers India Pvt. Ltd. (formerly Tata Chemicals Ltd.): <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/Summer%20Training%20Report%20(Abridged)-Profile.pdf">An Overview of Mechanical Maintenance and Related Processes</a> </p>
+</div>
+<hr>
+
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
@@ -106,4 +125,3 @@ Karnataka, India - 580011
 
 </body>
 </html>
-
