--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <hr>
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Course Projects</h3>
-    <p>CS 213, SSL Course Project: <a href="https://github.com/ksanu1998/iitdh_contact_directory">IIT Dharwad Contact Directory</a> </p>
+    <p>CS 213, SSL Course Project: <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a> </p>
 </div>
 <hr>
 <div class="container-fluid bg-3 text-center">
