--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">About</h3>
-  <p>I am pursuing a B.Tech in Computer Science Engineering from IIT Dharwad and currently in 4th Semester.    
+  <p>I am pursuing B.Tech in Computer Science Engineering from IIT Dharwad and currently in 4th Semester.    
 </div>
 <hr>
 <div class="container-fluid bg-3 text-center">
@@ -89,7 +89,7 @@
 </div>
   
 <hr>
-<div class="container-fluid bg-3 text-center" align="left">
+<div class="container-fluid bg-3 text-center">
   <h3 class="margin">Internships</h3>
     <p>National Centre for Radio Astrophysics - Tata Institute of Fundamental Research: <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/rawsc_report.pdf">Radio Astronomy Winter School 2018</a> </p>
     <p>Yara Fertilisers India Pvt. Ltd. (formerly Tata Chemicals Ltd.): <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/Summer%20Training%20Report%20(Abridged)-Profile.pdf">An Overview of Mechanical Maintenance and Related Processes</a> </p>
