--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
     <p>Yara Fertilisers India Pvt. Ltd. (formerly Tata Chemicals Ltd.): <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/Summer%20Training%20Report%20(Abridged)-Profile.pdf">An Overview of Mechanical Maintenance and Related Processes</a> </p>
 </div>
 <hr>
+<div class="container-fluid bg-3 text-center"  align="left">
+  <h3 class="margin">Other Activities</h3>
+    <p>DevHack 2019, IIT Dharwad: <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/rawsc_report.pdf">Public Addressal System</a> </p>
+</div>
+<hr>
 
 
 <!-- Third Container (Grid) -->
