--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <hr>
 <div class="container-fluid bg-3 text-center"  align="left">
   <h3 class="margin">Other Activities</h3>
-    <p>DevHack 2019, IIT Dharwad: <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/rawsc_report.pdf">Public Addressal System</a> </p>
+    <p>DevHack 2019, IIT Dharwad: <br> <a href="https://github.com/ksanu1998/team_names/blob/master/Enigma/README.md">Public Addressal System</a> </p>
 </div>
 <hr>
 
