--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
     </div>
     <div class="col-sm-4"> 
     	<p><span class="glyphicon glyphicon-home"><p>
-      <p>House No. 2, Hostel 2 (Bhairavi), New Hostel Complex, IIT Dharwad,
-Near High Court, P.B. Road, Dharwad, 
-Karnataka, India - 580011
+      <p>House No. 2, Hostel 2 (Bhairavi), 
+New Hostel Complex, IIT Dharwad,
+WALMI Campus, Belur Industrial Area, 
+Near High Court, P.B. Road, 
+Dharwad, Karnataka, India - 580011
+
 </p>
     </div>
   </div>
