--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 <!-- Second Container -->
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">About</h3>
-  <p>I am pursuing B.Tech in Computer Science Engineering from IIT Dharwad and currently in 4th Semester.    
+  <p>I am pursuing B.Tech in Computer Science Engineering from IIT Dharwad, currently in 4th Semester.    
 </div>
 <hr>
-<div class="container-fluid bg-3 text-center">
+<div class="container-fluid bg-3 text-left">
   <h3 class="margin">Course Projects</h3>
     <p>CS 213, SSL Course Project: <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a> </p>
 </div>
