--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <p>I am pursuing B.Tech in Computer Science Engineering from IIT Dharwad, currently in 4th Semester.    
 </div>
 <hr>
-<div class="container-fluid bg-3 text-left">
+<div class="container-fluid bg-3 text-center">
   <h3 class="margin">Course Projects</h3>
     <p>CS 213, SSL Course Project: <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a> </p>
 </div>
@@ -91,8 +91,10 @@
 <hr>
 <div class="container-fluid bg-3 text-center"  align="left">
   <h3 class="margin">Internships</h3>
-    <p>National Centre for Radio Astrophysics - Tata Institute of Fundamental Research: <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/rawsc_report.pdf">Radio Astronomy Winter School 2018</a> </p>
-    <p>Yara Fertilisers India Pvt. Ltd. (formerly Tata Chemicals Ltd.): <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/Summer%20Training%20Report%20(Abridged)-Profile.pdf">An Overview of Mechanical Maintenance and Related Processes</a> </p>
+    <ul>
+      <li>National Centre for Radio Astrophysics - Tata Institute of Fundamental Research: <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/rawsc_report.pdf">Radio Astronomy Winter School 2018</a> </li>
+      <li>Yara Fertilisers India Pvt. Ltd. (formerly Tata Chemicals Ltd.): <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/Summer%20Training%20Report%20(Abridged)-Profile.pdf">An Overview of Mechanical Maintenance and Related Processes</a> </li>
+  </ul>
 </div>
 <hr>
 <div class="container-fluid bg-3 text-center"  align="left">
