--- a/index.html
+++ b/index.html
@@ -91,10 +91,8 @@
 <hr>
 <div class="container-fluid bg-3 text-center"  align="left">
   <h3 class="margin">Internships</h3>
-    <ul>
-      <li>National Centre for Radio Astrophysics - Tata Institute of Fundamental Research: <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/rawsc_report.pdf">Radio Astronomy Winter School 2018</a> </li>
-      <li>Yara Fertilisers India Pvt. Ltd. (formerly Tata Chemicals Ltd.): <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/Summer%20Training%20Report%20(Abridged)-Profile.pdf">An Overview of Mechanical Maintenance and Related Processes</a> </li>
-  </ul>
+      <p>National Centre for Radio Astrophysics - Tata Institute of Fundamental Research: <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/rawsc_report.pdf">Radio Astronomy Winter School 2018</a> </p>
+      <p>Yara Fertilisers India Pvt. Ltd. (formerly Tata Chemicals Ltd.): <br> <a href="https://github.com/ksanu1998/new_profile/blob/master/Summer%20Training%20Report%20(Abridged)-Profile.pdf">An Overview of Mechanical Maintenance and Related Processes</a> </p>
 </div>
 <hr>
 <div class="container-fluid bg-3 text-center"  align="left">
