--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
 <hr>
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Course Projects</h3>
-    <p>CS 213, SSL Course Project:<br>
+    <p>CS 213, Software Systems Lab Course Project:<br>
+      <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
+    </p>
+  <p>CS 211, Data Structures and Algorithms Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
     </p>
 </div>
