--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
     </p>
   <p>CS 211, Data Structures and Algorithms Lab Course Project:<br>
-      <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
+      <a href="https://github.com/ksanu1998/Bulls_and_Cows">A Game of Bulls and Cows</a>
     </p>
 </div>
   
