--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
   <p>CS 211, Data Structures and Algorithms Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/Bulls_and_Cows">A Game of Bulls and Cows</a>
     </p>
+</div>  
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Noted Lab Assignments</h3>
+    <p>CS 378, Computer Networks Lab Assignment:<br>
+      <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
+    </p>
+  <p>CS 211, Data Structures and Algorithms Lab Course Project:<br>
+      <a href="https://github.com/ksanu1998/TCP_Congestion_Control">TCP Congestion Control</a>
+    </p>
 </div>
   
 <hr>
