--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand">MY PROFILE</a>
+        <t>
+           <a class="navbar-brand" href="my_activities.html">MY ACTIVITIES</a>
+      </t>
     </div>
 </nav>
 
