--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand">MY PROFILE</a>
-           <a class="navbar-brand" href="my_activities.html">MY ACTIVITIES</a>
+    </div>
+    <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="my_activities.html">MY ACTIVITIES</a>
     </div>
 </nav>
 
