--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand">MY PROFILE | </a>
+      <a class="navbar-brand"><b> MY PROFILE </b> | </a>
     </div>
     <div class="container">
     <div class="navbar-header">
