--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand"><b> MY PROFILE </b> | </a>
+      <a class="navbar-brand">PROFILE | </a>
     </div>
     <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="my_activities.html">MY ACTIVITIES</a>
+      <a class="navbar-brand" href="my_activities.html">ACTIVITIES</a>
     </div>
 </nav>
 
