--- a/my_activities.html
+++ b/my_activities.html
@@ -67,7 +67,11 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand">MY ACTIVITIES</a>
+      <a class="navbar-brand">PROFILE |</a>
+    </div>
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand"><b>ACTIVITIES</b></a>
     </div>
 </nav>
 
