--- a/my_activities.html
+++ b/my_activities.html
@@ -67,7 +67,7 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand">PROFILE |</a>
+      <a class="navbar-brand" href="index.html">PROFILE |</a>
     </div>
   <div class="container">
     <div class="navbar-header">
