--- a/my_activities.html
+++ b/my_activities.html
@@ -78,7 +78,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <img src="dial_host.jpg" class="img-responsive img-circle margin" style="display:inline" width="350" height="350">
-  <h3>Here are some of my contributions to the institute events, in chronological order. </h3>
+  <small>Here are some of my contributions to the institute events, in chronological order. </small>
 </div>
 
 <!-- Second Container -->
