--- a/my_activities.html
+++ b/my_activities.html
@@ -157,8 +157,7 @@
      Selected as a Student Mentor by the Institute Student Mentorship Programme for the academic year of 2019-20.
     </p>
 </div> 
-<hr>
-<hr>
+<hr size="30">
 <div class="container-fluid bg-3 text-center">
   <!--<h3 class="margin">Project Presentation<br><small>July 2019</small></h3>
     <p>
