--- a/my_activities.html
+++ b/my_activities.html
@@ -97,7 +97,7 @@
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Mess Committee <br><small>January 2018</small></h3>
     <p>
-      Memeber of Mess Committee during 2nd Semester. Instrumental in formalizing the mess procedures and procurement of lactometer.
+      Memeber of Mess Committee during 2nd Semester. Instrumental in formalizing the mess committee procedures and procurement of lactometer.
     </p>
 </div> 
   
@@ -157,7 +157,7 @@
      Selected as a Student Mentor by the Institute Student Mentorship Programme for the academic year of 2019-20.
     </p>
 </div> 
-<hr size="60">
+<hr>
 <div class="container-fluid bg-3 text-center">
   <!--<h3 class="margin">Project Presentation<br><small>July 2019</small></h3>
     <p>
