--- a/my_activities.html
+++ b/my_activities.html
@@ -90,14 +90,14 @@
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Visit to Tinkerer's Lab at IIT Bombay <br><small>October 2017</small></h3>
     <p>
-      Selected by the institute among the group of four students who visited IIT Bombay Tinkerer's Lab during and submitted a report to IIT Dharwad for the establishment of a similar facility.
+      Selected by the institute to be among the group of four students who visited IIT Bombay Tinkerer's Lab and submitted a report to IIT Dharwad for the establishment of a similar facility.
     </p>
 </div>  
 <hr>
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Mess Committee <br><small>January 2018</small></h3>
     <p>
-      Memeber of Mess Committee during 2nd Semester. Instrumental in formalizing the mess committee procedures and procurement of lactometer.
+      Memeber of mess committee during 2nd Semester. Instrumental in formalizing mess committee procedures and procurement of lactometer.
     </p>
 </div> 
   
@@ -105,7 +105,7 @@
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">International Yoga Day <br><small>May 2018</small></h3>
     <p>
-      Hosted the event held at IIT Dharwad on the occassion of International Yoga Day celebrations.
+      Hosted the event held at IIT Dharwad as a part of International Yoga Day celebrations.
     </p>
 </div> 
 <hr>
