--- a/my_activities.html
+++ b/my_activities.html
@@ -147,7 +147,7 @@
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Project Presentation<br><small>February 2019</small></h3>
     <p>
-     Selected among the few students by the institute to present my project to Mr. N. R. Narayanamurty, ex-Chairman of Infosys, during his visit to IIT Dharwad.
+     Selected among the few students by the institute to present my project to Mr. N. R. Narayanamurty, co-founder of Infosys, during his visit to IIT Dharwad.
     </p>
 </div> 
 <hr>
