--- a/my_activities.html
+++ b/my_activities.html
@@ -112,7 +112,7 @@
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Ice-Breaker Session <br><small>August 2018</small></h3>
     <p>
-      Member of the organising committee of 'Ice-breaker session' held for the freshers in 2018.
+      Member of the organising committee of 'Ice-Breaker Session' held for the freshers in 2018.
     </p>
 </div> 
 <hr>
@@ -133,7 +133,7 @@
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">DIAL 2018<br><small>October 2018</small></h3>
     <p>
-     Chief Student Coordinator, organiser and host of the event Development of Industry-Academia Link (DIAL) 2018.
+     Chief Student Coordinator, organiser and host of the event, Development of Industry-Academia Link (DIAL) 2018.
     </p>
 </div> 
 <hr>
@@ -154,7 +154,7 @@
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Institute Student Mentorship Programme<br><small>July 2019</small></h3>
     <p>
-     Selected as a Student Mentor by the Institute Student Mentorship Programme for the academic year of 2019-20.
+     Selected as a Student Mentor in the Institute Student Mentorship Programme for the academic year of 2019-20.
     </p>
 </div> 
 <hr>
