--- a/my_activities.html
+++ b/my_activities.html
@@ -159,13 +159,12 @@
 </div> 
 <hr>
 <div class="container-fluid bg-3 text-center">
-  <!--<h3 class="margin">Project Presentation<br><small>July 2019</small></h3>
+  <h3 class="margin">Volunteer<br><small>July 2019</small></h3>
     <p>
-     Selected among the few students by the institute to present my project to Mr. N. R. Narayanamurty, ex-Chairman of Infosys, during his visit to IIT Dharwad.
+     Participated as a volunteer on the registration day activities held for freshers in 2019.
     </p>
 </div> 
-<hr>-->
-
+<hr>
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Correspondence Details</h3>
