--- a/my_activities.html
+++ b/my_activities.html
@@ -165,6 +165,13 @@
     </p>
 </div> 
 <hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Incredible India Quiz<br><small>August 2019</small></h3>
+    <p>
+     Winner of Incredible India Quiz, held as a part of Inter-Branch Cultural Championship 2019-20 of IIT Dharwad.
+    </p>
+</div> 
+<hr>
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Correspondence Details</h3>
