--- a/my_activities.html
+++ b/my_activities.html
@@ -78,7 +78,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <img src="dial_host.jpg" class="img-responsive img-circle margin" style="display:inline" width="350" height="350">
-  <small>Here are some of my contributions to the institute events, in chronological order. </small>
+  <small>Here are some of my contributions to the institute events, in reverse-chronological order. </small>
 </div>
 
 <!-- Second Container -->
@@ -88,73 +88,9 @@
 </div>
 -->
 <div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Visit to Tinkerer's Lab at IIT Bombay <br><small>October 2017</small></h3>
+  <h3 class="margin">Incredible India Quiz<br><small>August 2019</small></h3>
     <p>
-      Selected by the institute to be among the group of four students who visited IIT Bombay Tinkerer's Lab and submitted a report to IIT Dharwad for the establishment of a similar facility.
-    </p>
-</div>  
-<hr>
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Mess Committee <br><small>January 2018</small></h3>
-    <p>
-      Memeber of mess committee during 2nd Semester. Instrumental in formalizing mess committee procedures and procurement of lactometer.
-    </p>
-</div> 
-  
-<hr>
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">International Yoga Day <br><small>May 2018</small></h3>
-    <p>
-      Hosted the event held at IIT Dharwad as a part of International Yoga Day celebrations.
-    </p>
-</div> 
-<hr>
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Ice-Breaker Session <br><small>August 2018</small></h3>
-    <p>
-      Member of the organising committee of 'Ice-Breaker Session' held for the freshers in 2018.
-    </p>
-</div> 
-<hr>
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Student Lecture<br><small>August 2018</small></h3>
-    <p>
-      Delivered a student lecture in the institute on my internship experiences at Yara Fertilisers India Pvt. Ltd.
-    </p>
-</div> 
-<hr>
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Foundation Day<br><small>August 2018</small></h3>
-    <p>
-     Hosted the 2nd Foundation Day event of IIT Dharwad in 2018.
-    </p>
-</div> 
-<hr>
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">DIAL 2018<br><small>October 2018</small></h3>
-    <p>
-     Chief Student Coordinator, organiser and host of the event, Development of Industry-Academia Link (DIAL) 2018.
-    </p>
-</div> 
-<hr>
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Student Lecture<br><small>January 2019</small></h3>
-    <p>
-     Delivered a student lecture in the institute on my winter school experiences at RAWSC 2018 conducted by IUCAA and NCRA-TIFR of Pune.
-    </p>
-</div> 
-<hr>
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Project Presentation<br><small>February 2019</small></h3>
-    <p>
-     Selected among the few students by the institute to present my project to Mr. N. R. Narayanamurty, co-founder of Infosys, during his visit to IIT Dharwad.
-    </p>
-</div> 
-<hr>
-<div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Institute Student Mentorship Programme<br><small>July 2019</small></h3>
-    <p>
-     Selected as a Student Mentor in the Institute Student Mentorship Programme for the academic year of 2019-20.
+     Winner of Incredible India Quiz, held as a part of Inter-Branch Cultural Championship 2019-20 of IIT Dharwad.
     </p>
 </div> 
 <hr>
@@ -166,12 +102,76 @@
 </div> 
 <hr>
 <div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Incredible India Quiz<br><small>August 2019</small></h3>
+  <h3 class="margin">Institute Student Mentorship Programme<br><small>July 2019</small></h3>
     <p>
-     Winner of Incredible India Quiz, held as a part of Inter-Branch Cultural Championship 2019-20 of IIT Dharwad.
+     Selected as a Student Mentor in the Institute Student Mentorship Programme for the academic year of 2019-20.
     </p>
 </div> 
 <hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Project Presentation<br><small>February 2019</small></h3>
+    <p>
+     Selected among the few students by the institute to present my project to Mr. N. R. Narayanamurty, co-founder of Infosys, during his visit to IIT Dharwad.
+    </p>
+</div> 
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Student Lecture<br><small>January 2019</small></h3>
+    <p>
+     Delivered a student lecture in the institute on my winter school experiences at RAWSC 2018 conducted by IUCAA and NCRA-TIFR of Pune.
+    </p>
+</div> 
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">DIAL 2018<br><small>October 2018</small></h3>
+    <p>
+     Chief Student Coordinator, organiser and host of the event, Development of Industry-Academia Link (DIAL) 2018.
+    </p>
+</div> 
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Foundation Day<br><small>August 2018</small></h3>
+    <p>
+     Hosted the 2nd Foundation Day event of IIT Dharwad in 2018.
+    </p>
+</div> 
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Student Lecture<br><small>August 2018</small></h3>
+    <p>
+      Delivered a student lecture in the institute on my internship experiences at Yara Fertilisers India Pvt. Ltd.
+    </p>
+</div> 
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Ice-Breaker Session <br><small>August 2018</small></h3>
+    <p>
+      Member of the organising committee of 'Ice-Breaker Session' held for the freshers in 2018.
+    </p>
+</div> 
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">International Yoga Day <br><small>May 2018</small></h3>
+    <p>
+      Hosted the event held at IIT Dharwad as a part of International Yoga Day celebrations.
+    </p>
+</div> 
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Mess Committee <br><small>January 2018</small></h3>
+    <p>
+      Memeber of mess committee during 2nd Semester. Instrumental in formalizing mess committee procedures and procurement of lactometer.
+    </p>
+</div> 
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Visit to Tinkerer's Lab at IIT Bombay <br><small>October 2017</small></h3>
+    <p>
+      Selected by the institute to be among the group of four students who visited IIT Bombay Tinkerer's Lab and submitted a report to IIT Dharwad for the establishment of a similar facility.
+    </p>
+</div>  
+<hr>
+
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Correspondence Details</h3>
