--- a/my_activities.html
+++ b/my_activities.html
@@ -87,6 +87,20 @@
   <p><b>Here are some of my contributions to the institute events, in chronological order. </b></p>
 </div>
 -->
+    <div class="container-fluid bg-3 text-center">
+  <h3 class="margin">IIC Student Coordinator<br><small>November 2019</small></h3>
+    <p>
+    Nominated as Student Coordinator of IIT Dharwad Institute Innovation Council (IIC).
+    </p>
+</div> 
+<hr>
+<div class="container-fluid bg-3 text-center">
+  <h3 class="margin">Volunteer<br><small>July 2019</small></h3>
+    <p>
+     Participated as a volunteer on the registration day activities held for freshers in 2019.
+    </p>
+</div> 
+<hr>
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Incredible India Quiz<br><small>August 2019</small></h3>
     <p>
