--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <hr>
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Course Projects</h3>
-  <i class="fa fa-asterisk" style="font-size:12px;color:red"> marked course projects are ongoing
+  <i class="fa fa-asterisk" style="font-size:12px;color:red"> marked course projects are ongoing </i>
     <br>
     <p>EE 401, Pattern Recognition and Machine Learning Course Project:<br>
       <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">Credit Card Fraud Detection</a>
