--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
@@ -91,7 +92,8 @@
   <h3 class="margin">Course Projects</h3>
   <i class="fa fa-asterisk" style="font-size:12px;color:red"> marked course projects are ongoing </i>
     <br>
-    <p>EE 401, Pattern Recognition and Machine Learning Course Project:<br>
+  <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i>
+    EE 401, Pattern Recognition and Machine Learning Course Project:<br>
       <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">Credit Card Fraud Detection</a>
     </p>
     <p>CS 213, Software Systems Lab Course Project:<br>
