--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 <hr>
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Course Projects</h3>
-  <i class="fa fa-asterisk" style="font-size:12px;color:red"> <div style="font: 12px Montserrat, sans-serif; color: #555555"> marked are ongoing projects</div> </i>
+ <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked projects are ongoing </div>
     <br>
   <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i>
     EE 401, Pattern Recognition and Machine Learning Course Project:<br>
-      <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">Credit Card Fraud Detection</a>
+      <a href="">Credit Card Fraud Detection</a>
     </p>
     <p>CS 213, Software Systems Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
