--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
 <hr>
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Noted Lab Assignments</h3>
+  <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked assignments are ongoing </div>
+    <br>
+    <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> CS 311, Computer Architecture Lab Assignment:<br>
+      <a href="">Processor Simulator for ToyRISC</a>
+    </p>
     <p>CS 378, Computer Networks Lab Assignment:<br>
       <a href="https://github.com/ksanu1998/TCP_congestion_control">TCP Congestion Control</a>
     </p>
