--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <h3 class="margin">Noted Lab Assignments</h3>
   <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked assignments are ongoing </div>
     <br>
-    <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> CS 311, Computer Architecture Lab Assignment:<br>
+  <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> CS 311, Computer Architecture Lab Assignment:<br>
       <a href="">Processor Simulator for ToyRISC</a>
     </p>
     <p>CS 378, Computer Networks Lab Assignment:<br>
