--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <br>
   <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i>
     EE 401, Pattern Recognition and Machine Learning Course Project:<br>
-      <a href="">Credit Card Fraud Detection</a>
+    Credit Card Fraud Detection
+      <!--<a href="">Credit Card Fraud Detection</a> -->
     </p>
     <p>CS 213, Software Systems Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
@@ -109,7 +110,8 @@
   <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked assignments are ongoing </div>
     <br>
   <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> CS 311, Computer Architecture Lab Assignment:<br>
-      <a href="">Processor Simulator for ToyRISC</a>
+    Processor Simulator for ToyRISC  
+    <!-- <a href="">Processor Simulator for ToyRISC</a> -->
     </p>
     <p>CS 378, Computer Networks Lab Assignment:<br>
       <a href="https://github.com/ksanu1998/TCP_congestion_control">TCP Congestion Control</a>
