--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <img src="profile.jpg" class="img-responsive img-circle margin" style="display:inline" width="350" height="350">
-  <h3>K. Sai Anuroop</h3>
+  <h3>Sai Anuroop Kesanapalli</h3>
 </div>
 
 <!-- Second Container -->
