--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Dharwad, Karnataka, India - 580011
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p><span class="glyphicon glyphicon-copyright-mark"> 2019 K. Sai Anuroop</a></p> 
+  <p><span class="glyphicon glyphicon-copyright-mark"> 2019 Sai Anuroop Kesanapalli</a></p> 
 </footer>
 
 </body>
