--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
     <br>
   <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i>
     EE 401, Pattern Recognition and Machine Learning Course Project:<br>
-    Credit Card Fraud Detection
-      <!--<a href="">Credit Card Fraud Detection</a> -->
+      <a href="https://github.com/ksanu1998/Credit-Card-Fraud-Detection-using-ML-Algorithms/blob/master/README.md">Credit Card Fraud Detection</a>
     </p>
     <p>CS 213, Software Systems Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
