--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <br>
   <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> CS 311, Computer Architecture Lab Assignment:<br>
     Processor Simulator for ToyRISC  
-    <!-- <a href="">Processor Simulator for ToyRISC</a> -->
+    <a href="https://github.com/ksanu1998/Processor-Simulator-for-ToyRISC">Processor Simulator for ToyRISC</a>
     </p>
     <p>CS 378, Computer Networks Lab Assignment:<br>
       <a href="https://github.com/ksanu1998/TCP_congestion_control">TCP Congestion Control</a>
