--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
   <p>CS 211, Data Structures and Algorithms Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/Bulls_and_Cows">A Game of Bulls and Cows</a>
     </p>
+  <p>CS 211, Databases and Information Systems Lab Course Project:<br>
+      <a href="https://github.com/ksanu1998/">Performance of two different buffering strategies for ToyDB</a>
+    </p>
 </div>  
 <hr>
 <div class="container-fluid bg-3 text-center">
