--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
     EE 401, Pattern Recognition and Machine Learning Course Project:<br>
       <a href="https://github.com/ksanu1998/Credit-Card-Fraud-Detection-using-ML-Algorithms/blob/master/README.md">Credit Card Fraud Detection</a>
     </p>
-    <p>CS 213, Software Systems Lab Course Project:<br>
+    <p>Software Systems Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
     </p>
-  <p>CS 211, Data Structures and Algorithms Lab Course Project:<br>
+  <p>Data Structures and Algorithms Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/Bulls_and_Cows">A Game of Bulls and Cows</a>
     </p>
-  <p>CS 211, Databases and Information Systems Lab Course Project:<br>
-      <a href="https://github.com/ksanu1998/">Performance of two different buffering strategies for ToyDB</a>
+  <p>Databases and Information Systems Lab Course Project:<br>
+      <a href="https://github.com/ksanu1998/Performance_of_two_different_buffering_strategies_for_ToyDB">Performance of two different buffering strategies for ToyDB</a>
     </p>
 </div>  
 <hr>
@@ -111,10 +111,10 @@
   <h3 class="margin">Noted Lab Assignments</h3>
   <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked assignments are ongoing </div>
     <br>
-  <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> CS 311, Computer Architecture Lab Assignment:<br>
+  <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i>Computer Architecture Lab Assignment:<br>
     <a href="https://github.com/ksanu1998/Processor-Simulator-for-ToyRISC">Processor Simulator for ToyRISC</a>
     </p>
-    <p>CS 378, Computer Networks Lab Assignment:<br>
+    <p>Computer Networks Lab Assignment:<br>
       <a href="https://github.com/ksanu1998/TCP_congestion_control">TCP Congestion Control</a>
     </p>
 </div>
