--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <a href="https://github.com/ksanu1998/Bulls_and_Cows">A Game of Bulls and Cows</a>
     </p>
   <p>Databases and Information Systems Lab Course Project:<br>
-      <a href="https://github.com/ksanu1998/Performance_of_two_different_buffering_strategies_for_ToyDB">Performance of two different buffering strategies for ToyDB</a>
+      <a href="https://github.com/ksanu1998/Performance_of_two_different_buffering_strategies_for_ToyDB">Performance of two different Buffering Strategies for ToyDB</a>
     </p>
 </div>  
 <hr>
