--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 <hr>
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Course Projects</h3>
- <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked projects are ongoing </div>
+<!-- <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked projects are ongoing </div> -->
     <br>
-  <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i>
+<!--  <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> -->
     EE 401, Pattern Recognition and Machine Learning Course Project:<br>
       <a href="https://github.com/ksanu1998/Credit-Card-Fraud-Detection-using-ML-Algorithms/blob/master/README.md">Credit Card Fraud Detection</a>
     </p>
@@ -111,7 +111,8 @@
   <h3 class="margin">Noted Lab Assignments</h3>
   <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked assignments are ongoing </div>
     <br>
-  <p> <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i>Computer Architecture Lab Assignment:<br>
+  <p> 
+    <!-- <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> -->Computer Architecture Lab Assignment:<br>
     <a href="https://github.com/ksanu1998/Processor-Simulator-for-ToyRISC">Processor Simulator for ToyRISC</a>
     </p>
     <p>Computer Networks Lab Assignment:<br>
