--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <br> -->
 <!--  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> -->
   <p>
-    EE 401, Pattern Recognition and Machine Learning Course Project:<br>
+    Pattern Recognition and Machine Learning Course Project:<br>
       <a href="https://github.com/ksanu1998/Credit-Card-Fraud-Detection-using-ML-Algorithms/blob/master/README.md">Credit Card Fraud Detection</a>
     </p>
     <p>Software Systems Lab Course Project:<br>
