--- a/my_activities.html
+++ b/my_activities.html
@@ -90,15 +90,17 @@
     <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Headstart<br><small>March 2020</small></h3>
     <p>
-   Student-coordinator for IIC and overall coordinator for Headstart event on 14th March 2020. The aim of this event is to bring together some of the best innovator, innovation managers and entrpreneurs for talks and panel discussion, for the benefit of young-innovative minds at IIT Dharwad.
+   Student-coordinator for IIC and overall coordinator for Headstart event on 14th March 2020. The aim of this event is to bring together some of the best innovators, innovation managers and entrpreneurs for talks and panel discussion, for the benefit of young-innovative minds at IIT Dharwad.
     </p>
 </div> 
+    <hr>
     <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Parsec 2020<br><small>February 2020</small></h3>
     <p>
    Outreach Lead for Parsec 2020. Coordinated with the invitees (chief guests, speakers and jury members) regarding their invitations, logistics and hospitality.
     </p>
 </div> 
+    <hr>
     <div class="container-fluid bg-3 text-center">
   <h3 class="margin">IIC Student Coordinator<br><small>November 2019</small></h3>
     <p>
