--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <div class="container-fluid bg-3 text-center"  align="left">
   <h3 class="margin">Other Activities</h3>
   <p>Google Hash Code 2020: <br> <!--<a href="#"></a>-->Team ranked 909 worldwide and 80 in India</p>
-  <p>SoftBank's Forex Predictor Challenge, Inter-IIT Tech Meet 2019: <br> <!--<a href="#"></a>-->Worked on an algorithm using SVM and hyper-tuned SVC parameters which predicted the forex of JPY vs USD based on data presented to us </p>
+  <p>SoftBank Forex Algorithm Challenge, Inter-IIT Tech Meet 2019: <br> <!--<a href="#"></a>-->Worked on an algorithm using SVM and hyper-tuned SVC parameters which predicted the forex of JPY vs USD based on data presented to us </p>
     <p>DevHack 2019, IIT Dharwad: <br> <a href="https://github.com/ksanu1998/DevHack_2019/blob/master/README.md">Public Address System</a> </p>
     </div>
 <hr>
