--- a/index.html
+++ b/index.html
@@ -93,9 +93,13 @@
 <!-- <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked projects are ongoing </div>
     <br> -->
 <!--  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> -->
-  <p>
+    <p>
     Pattern Recognition and Machine Learning Course Project:<br>
       <a href="https://github.com/ksanu1998/Credit-Card-Fraud-Detection-using-ML-Algorithms/blob/master/README.md">Credit Card Fraud Detection</a>
+    </p>
+   <p>
+    Databases and Information Systems Lab Course Project:<br>
+      <a href="https://github.com/ksanu1998/Performance_of_two_different_buffering_strategies_for_ToyDB">Buffer Manager for PF Layer of ToyDB</a>
     </p>
     <p>Software Systems Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/iitdh_contact_directory/blob/master/README.md">IIT Dharwad Contact Directory</a>
@@ -103,15 +107,24 @@
   <p>Data Structures and Algorithms Lab Course Project:<br>
       <a href="https://github.com/ksanu1998/Bulls_and_Cows">A Game of Bulls and Cows</a>
     </p>
-  <p>Databases and Information Systems Lab Course Project:<br>
-      <a href="https://github.com/ksanu1998/Performance_of_two_different_buffering_strategies_for_ToyDB">Performance of two different Buffering Strategies for ToyDB</a>
-    </p>
 </div>  
 <hr>
 <div class="container-fluid bg-3 text-center">
-  <h3 class="margin">Noted Lab Assignments</h3>
+  <h3 class="margin">Lab Assignments</h3>
  <!-- <div style="font: 12px Montserrat, sans-serif; color: #555555">  <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> marked assignments are ongoing </div>
     <br> -->
+  <p> 
+    <!-- <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> -->Operating Systems Lab Assignment:<br>
+    <a href="https://github.com/ksanu1998/immediate_fs_minix_os">Implementation of Immediate Files in Minix OS</a>
+    </p>
+   <p> 
+    <!-- <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> -->Artificial Intelligence Lab Assignment:<br>
+    <a href="https://github.com/ksanu1998/4x4_sudoku_solver">4x4 Sudoku Solver using various search techniques</a>
+    </p>
+  <p> 
+    <!-- <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> -->Software Engineering Assignment:<br>
+    <a href="https://github.com/ksanu1998/PCR-RFP">A study of PCR-RFP document</a>
+  </p>
   <p> 
     <!-- <i class="fa fa-asterisk" style="font-size:12px;color:red"> </i> -->Computer Architecture Lab Assignment:<br>
     <a href="https://github.com/ksanu1998/Processor-Simulator-for-ToyRISC">Processor Simulator for ToyRISC</a>
