--- a/my_activities.html
+++ b/my_activities.html
@@ -90,7 +90,7 @@
     <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Headstart<br><small>March 2020</small></h3>
     <p>
-   Student-coordinator for IIC and overall coordinator for <a href="http://iic.iitdh.ac.in/headstart.html">Headstart</a> event on 14th March 2020. The aim of this event is to bring together some of the best innovators, innovation managers and entrpreneurs for talks and panel discussion, for the benefit of young-innovative minds at IIT Dharwad.
+      Student-coordinator for <a href="https://iic.iitdh.ac.in">IIC</a> and overall coordinator for <a href="http://iic.iitdh.ac.in/headstart.html">Headstart</a> event on 14th March 2020. The aim of this event is to bring together some of the best innovators, innovation managers and entrpreneurs for talks and panel discussion, for the benefit of young-innovative minds at IIT Dharwad.
     </p>
 </div> 
     <hr>
@@ -104,7 +104,7 @@
     <div class="container-fluid bg-3 text-center">
   <h3 class="margin">IIC Student Coordinator<br><small>November 2019</small></h3>
     <p>
-    Nominated as Student Coordinator of IIT Dharwad Institute Innovation Council (IIC).
+    Nominated as Student Coordinator of IIT Dharwad  <a href="https://iic.iitdh.ac.in">Institute Innovation Council</a> (IIC).
     </p>
 </div> 
 <hr>
@@ -125,7 +125,7 @@
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Institute Student Mentorship Programme<br><small>July 2019</small></h3>
     <p>
-     Selected as a Student Mentor in the Institute Student Mentorship Programme for the academic year of 2019-20.
+     Selected as a Student Mentor in the Institute  <a href="https://smp.iitdh.ac.in">Student Mentorship Programme</a> for the academic year of 2019-20.
     </p>
 </div> 
 <hr>
