--- a/my_activities.html
+++ b/my_activities.html
@@ -90,7 +90,7 @@
     <div class="container-fluid bg-3 text-center">
   <h3 class="margin">Headstart<br><small>March 2020</small></h3>
     <p>
-      Student-coordinator for <a href="http://iic.iitdh.ac.in">IIC</a> and overall coordinator for <a href="http://iic.iitdh.ac.in/headstart.html">Headstart</a> event on 14th March 2020. The aim of this event is to bring together some of the best innovators, innovation managers and entrpreneurs for talks and panel discussion, for the benefit of young-innovative minds at IIT Dharwad.
+      Student-coordinator for <a href="http://iic.iitdh.ac.in">IIC</a> and overall coordinator for <a href="http://iic.iitdh.ac.in/headstart.html">Headstart</a> event on 14th March 2020 (event was cancelled due to outbreak of COVID-19). The aim of this event was to bring together some of the best innovators, innovation managers and entrpreneurs for talks and panel discussion, for the benefit of young-innovative minds at IIT Dharwad.
     </p>
 </div> 
     <hr>
