--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <h3 class="margin">Correspondence Details</h3>
   <div class="row">
     <div class="col-sm-4">
-      <p><span class="fa fa-whatsapp" aria-hidden="true"></span><p> 
+      <p><span class="fa fa-whatsapp" aria-hidden="true" fa-lg></span><p> 
       	<p>+91-7036053327</p>
     </div>
     <div class="col-sm-4"> 
