--- a/my_activities.html
+++ b/my_activities.html
@@ -208,7 +208,7 @@
       <p>170030035@iitdh.ac.in</p>
     </div>
     <div class="col-sm-4"> 
-    	<p><span class="glyphicon glyphicon-home"><p>
+      <p><span class="fa fa-map-marker fa-lg"></span><p>
       <p>House No. 2, Hostel 2 (Bhairavi), 
 New Hostel Complex, IIT Dharwad,
 WALMI Campus, Belur Industrial Area, 
