--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <style>
   body {
       font: 20px Montserrat, sans-serif;
@@ -153,6 +154,7 @@
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Correspondence Details</h3>
+  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sai-anuroop-kesanapalli-98047216b"><a class="LI-simple-link" href='https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b?trk=profile-badge'>Sai Anuroop Kesanapalli</a></div>
   <div class="row">
     <div class="col-sm-4">
       <p><span class="fa fa-whatsapp fa-lg"></span><p> 
