--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Correspondence Details</h3>
-  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sai-anuroop-kesanapalli-98047216b"><a class="LI-simple-link" href='https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b?trk=profile-badge'>Sai Anuroop Kesanapalli</a></div>
   <div class="row">
     <div class="col-sm-4">
       <p><span class="fa fa-whatsapp fa-lg"></span><p> 
@@ -177,6 +176,10 @@ Dharwad, Karnataka, India - 580011
     </div>
   </div>
 </div>
+    <!-- Fourth Container (Grid) -->
+<div class="container-fluid bg-3 text-center">  
+    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sai-anuroop-kesanapalli-98047216b"><a class="LI-simple-link" href='https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b?trk=profile-badge'>Sai Anuroop Kesanapalli</a></div>
+    </div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
