--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@ Dharwad, Karnataka, India - 580011
 </div>
     <!-- Fourth Container (Grid) -->
 <div class="container-fluid bg-3 text-center">  
+  <div class="row">
     <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sai-anuroop-kesanapalli-98047216b"><a class="LI-simple-link" href='https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b?trk=profile-badge'>Sai Anuroop Kesanapalli</a></div>
     </div>
-
+   </div>
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
   <p><span class="glyphicon glyphicon-copyright-mark"> 2020 Sai Anuroop Kesanapalli</a></p> 
