--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Dharwad, Karnataka, India - 580011
   </div>
 </div>
     <!-- Fourth Container (Grid) -->
-<div class="container-fluid bg-3 text-center">  
+<div class="container-fluid bg-3">  
   <div class="row">
     <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sai-anuroop-kesanapalli-98047216b"><a class="LI-simple-link" href='https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b?trk=profile-badge'>Sai Anuroop Kesanapalli</a></div>
     </div>
