--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Dharwad, Karnataka, India - 580011
     <!-- Fourth Container (Grid) -->
 <div class="container-fluid bg-3">  
   <div class="row">
-    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sai-anuroop-kesanapalli-98047216b"><a class="LI-simple-link" href='https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b?trk=profile-badge'>Sai Anuroop Kesanapalli</a></div>
+    <div class="LI-profile-badge"  align ="center" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sai-anuroop-kesanapalli-98047216b"><a class="LI-simple-link" href='https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b?trk=profile-badge'>Sai Anuroop Kesanapalli</a></div>
     </div>
    </div>
 <!-- Footer -->
