--- a/index.html
+++ b/index.html
@@ -171,17 +171,14 @@ New Hostel Complex, IIT Dharwad,
 WALMI Campus, Belur Industrial Area, 
 Near High Court, P.B. Road, 
 Dharwad, Karnataka, India - 580011
-
 </p>
+    </div>
+    <div class="col-sm-4">
+      <p><span class="fa fa-linkedin-square fa-lg"></span><p> 
+      <p><a href="https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b">Sai Anuroop Kesanapalli</a></p>
     </div>
   </div>
 </div>
-    <!-- Fourth Container (Grid) -->
-<div class="container-fluid bg-3">  
-  <div class="row">
-    <div class="LI-profile-badge"  align ="center" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="sai-anuroop-kesanapalli-98047216b"><a class="LI-simple-link" href='https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b?trk=profile-badge'>Sai Anuroop Kesanapalli</a></div>
-    </div>
-   </div>
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
   <p><span class="glyphicon glyphicon-copyright-mark"> 2020 Sai Anuroop Kesanapalli</a></p> 
